--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,81 @@
 .App {
   text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.itc-tac-toe {
+  width: 500px;
+  height: 500px;
+  background-color: #503854;
+ position: relative;
+  top: 50px;
+  left: 100px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.ttt-grid {
+    width: 165.92px;
+    height: 165.92px;
+    border: 4px solid deeppink;
+    float: left;
+    box-sizing: border-box;
 }
-
-.App-link {
-  color: #61dafb;
+.players{
+    color: white;
+    position: relative;
+    top: -450px;
+    left: 650px;
 }
+.players{
+    color: white;
+}
+.figure {
+    width: 150px;
+    height: 150px;
+}
+.message {
+    color: white;
+    position: relative;
+    top: -450px;
+    left: 650px;
+    font-size: xx-large;
+}
+.zot {
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    position: relative;
+    top: -630px;
+    left: 80px;
+}
+.tff{
+    position: relative;
+    top: -465px;
+    left: 80px;
+}
+.sse{
+    position: relative;
+    top: -300px;
+    left: 80px;
+}
+.zts{
+    position: relative;
+    top: -730px;
+    left: 180px;
+}
+.ofs{
+    position: relative;
+    top: -730px;
+    left: 340px;
+}
+.tfe{
+    position: relative;
+    top: -730px;
+    left: 510px;
+}
+.tfs{
+    position: relative;
+    top: -735px;
+    left: 70px;
+}
+.zfe {
+    position: relative;
+    transform: scale(1, -1);
+    top: -735px;
+    left: 70px;
 }
